# youplot

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: index.html
youplot/: figure.py
youplot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
youplot/colors/: palette.py
youplot/examples/: basic_line.py
youplot/options/: annotations.py  axes.py
youplot/render/: css.py  js.py  scatter_js.py
youplot/series/: scatter.py
youplot/themes/: base.py
youplot/utils/: browser.py  data.py
